--- a/package.json
+++ b/package.json
@@ -12,7 +12,11 @@
     "body-parser": "^1.18.3",
     "ejs": "^2.6.1",
     "express": "^4.16.3",
+    "express-session": "^1.17.1",
     "lodash": "^4.17.15",
-    "mongoose": "^5.9.15"
+    "mongoose": "^5.9.15",
+    "passport": "^0.4.1",
+    "passport-local": "^1.0.0",
+    "passport-local-mongoose": "^6.0.1"
   }
 }
